# adbc-verification

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  run-verify.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: flightsql-adbc-fe-crash.md  q17-adbc-fe-crash.md  upstream-discussion-draft.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmark/: explain_parser.py  mysql-jdbc-vs-adbc.py  starrocks-jdbc-vs-adbc.py
docker/: Dockerfile  build-flightsql-driver.sh  docker-compose.yml  entrypoint.sh  fetch-jdbc-jar.sh  generate-data.py  generate-sf1-data.py
docker/certs/: flightsql-ca.key  flightsql-ca.pem  postgres-ca.key  postgres-ca.pem
docker/data/: cross_sqlite_a.db  cross_sqlite_b.db  test_sqlite.db  tpch_duckdb.db  tpch_sqlite.db
lib/: catalog_helpers.py  docker_backends.py  driver_registry.py  starrocks.py  tls.py
queries/cross-join/: sqlite-postgres-join.sql
queries/duckdb/: 01-select.sql  02-join.sql
queries/flightsql/: 01-select.sql  02-join.sql
queries/mysql/: 01-select.sql  02-join.sql  03-q01-pricing-summary.sql  03-q02-minimum-cost-supplier.sql  03-q03-shipping-priority.sql  03-q04-order-priority-checking.sql  03-q05-local-supplier-volume.sql  03-q06-forecasting-revenue-change.sql  03-q07-volume-shipping.sql  (+15 more)
tests/: test_benchmark_cli.py  test_cross_join.py  test_duckdb.py  test_flightsql.py  test_flightsql_starrocks.py  test_mysql.py  test_negative.py  test_postgres.py  test_queries.py  test_sqlite.py  test_starrocks_benchmark_tdd.py
(+106 files in other folders)
